--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="txt"> Причины почему не надо отчислять:</p> 
             <ul>
                 <li>Я хороший</li>
-                <li>Я буду страраться (наверное)</li>
+                <li>Я буду стараться (наверное)</li>
                 <li>Идите нахуй!</li>
             </ul>
     </main>
